First refugee story
- Word cloud

--- a/Code/basic_analysis.ipynb
+++ b/Code/basic_analysis.ipynb
@@ -794,7 +794,7 @@
     "\n",
     "# Save geo data\n",
     "\n",
-    "with open(git_loc + '/Refugee_Project/Code/Output/geo_data.json', 'w') as f_output:\n",
+    "with open(git_loc + '/Refugee_Project/Code/Output/geo_data.json', 'r') as f_output:\n",
     "    f_output.write(json.dumps(geo_data, indent=4))"
    ]
   },
