Word frequency in each stories

--- a/Code/basic_analysis.ipynb
+++ b/Code/basic_analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -118,6 +118,10 @@
     "    r'(?:\\S)' # anything else\n",
     "]\n",
     "\n",
+    "tokens_re = re.compile(r'('+'|'.join(regex_str)+')', re.VERBOSE | re.IGNORECASE)\n",
+    "emoticon_re = re.compile(r'^'+emoticons_str+'$', re.VERBOSE | re.IGNORECASE)\n",
+    "\n",
+    "\n",
     "def tokenize(s):\n",
     "    return tokens_re.findall(s)\n",
     " \n",
@@ -127,9 +131,7 @@
     "        tokens = [token if emoticon_re.search(token) else token.lower() for token in tokens]\n",
     "    return tokens\n",
     " \n",
-    "    \n",
-    "tokens_re = re.compile(r'('+'|'.join(regex_str)+')', re.VERBOSE | re.IGNORECASE)\n",
-    "emoticon_re = re.compile(r'^'+emoticons_str+'$', re.VERBOSE | re.IGNORECASE)\n"
+    "    \n"
    ]
   },
   {
@@ -230,16 +232,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hashtags:  [('#Balochistan', 658), ('#Clooney', 640), ('#UK', 629), ('#Europe', 415), ('#Invasion', 371), ('#ChildrenUprooted', 202), ('#refugee', 199), ('#Refugee', 173), ('#G20', 150), ('#AChildIsAChild', 141), ('#Syria', 129), ('#GeorgeClooney', 112), ('#frees', 110), ('#MAGA', 93), ('#', 86), ('#ma4t', 81), ('#climate', 81), ('#DefendEuropa', 80), ('#Orban', 80), ('#migrant', 68)] \n",
+      "Hashtags:  [('#Balochistan', 658), ('#Clooney', 640), ('#UK', 629), ('#Europe', 415), ('#Invasion', 371), ('#ChildrenUprooted', 202), ('#refugee', 199), ('#Refugee', 174), ('#G20', 150), ('#AChildIsAChild', 141), ('#Syria', 129), ('#GeorgeClooney', 112), ('#frees', 110), ('#MAGA', 93), ('#', 86), ('#ma4t', 81), ('#climate', 81), ('#DefendEuropa', 80), ('#Orban', 80), ('#migrant', 68)] \n",
       "\n",
-      "Tags :  [('@TRobinsonNewEra', 2926), ('@PrisonPlanet', 2219), ('@AmyMek', 1676), ('@DineshDSouza', 1356), ('@V_of_Europe', 1091), ('@joshdcaplan', 1045), ('@ChooseToBFree', 987), ('@StefanMolyneux', 971), ('@PinkBelgium', 741), ('@TheMarkRomano', 729), ('@DavidJo52951945', 709), ('@Timcast', 509), ('@Voices4Humanity', 491), ('@horowitz39', 477), ('@UNICEF', 336), ('@RavenNightMyst', 330), ('@defencepk', 298), ('@JulianBurnside', 272), ('@PeterDutton_MP', 262), ('@bbusa617', 237)] \n",
+      "Tags :  [('@TRobinsonNewEra', 2926), ('@PrisonPlanet', 2219), ('@AmyMek', 1676), ('@DineshDSouza', 1356), ('@V_of_Europe', 1091), ('@joshdcaplan', 1046), ('@ChooseToBFree', 987), ('@StefanMolyneux', 972), ('@PinkBelgium', 741), ('@TheMarkRomano', 729), ('@DavidJo52951945', 709), ('@Timcast', 509), ('@Voices4Humanity', 491), ('@horowitz39', 477), ('@UNICEF', 336), ('@RavenNightMyst', 330), ('@defencepk', 298), ('@JulianBurnside', 272), ('@PeterDutton_MP', 262), ('@bbusa617', 237)] \n",
       "\n",
-      "Terms :  [('refugee', 9270), ('Clooney', 7396), ('George', 4959), ('Migrant', 4720), ('migrant', 4076), ('amp', 3798), ('The', 3263), ('terrorists', 3259), ('I', 3019), ('Refugee', 2983), ('hypocrite', 2944), ('Europe', 2939), ('world', 2795), ('like', 2678), ('produce', 2512), ('You', 2392), ('still', 2377), ('crisis', 2366), ('people', 2317), ('fucking', 2247)] \n",
+      "Terms :  [('refugee', 9273), ('Clooney', 7396), ('George', 4959), ('Migrant', 4721), ('migrant', 4076), ('amp', 3798), ('The', 3265), ('terrorists', 3259), ('I', 3020), ('Refugee', 2983), ('hypocrite', 2944), ('Europe', 2939), ('world', 2795), ('like', 2679), ('produce', 2512), ('You', 2392), ('still', 2377), ('crisis', 2366), ('people', 2318), ('fucking', 2247)] \n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# not sure the number (count) is correct\n",
+    "\n",
     "# count more recurring terms\n",
     "\n",
     "count_all = Counter()\n",
@@ -254,10 +258,10 @@
     "        terms_at = [term for term in preprocess(tweets_data[tweet_id]['text']) if term.startswith('@')]\n",
     "        terms_only = [term for term in preprocess(tweets_data[tweet_id]['text']) if term not in stop and not term.startswith(('@', '#'))]\n",
     "        \n",
-    "        count_all.update(terms_all)\n",
-    "        count_hash.update(terms_hash)\n",
-    "        count_at.update(terms_at)\n",
-    "        count_only.update(terms_only)\n",
+    "    count_all.update(terms_all)\n",
+    "    count_hash.update(terms_hash)\n",
+    "    count_at.update(terms_at)\n",
+    "    count_only.update(terms_only)\n",
     "\n",
     "#print(count_all.most_common(20), '\\n')\n",
     "print('Hashtags: ', count_hash.most_common(20), '\\n')\n",
